# cents

./: .gitignore  DOCKER_README.md  PRODUCTION_DEPLOYMENT.md  README.md  debug-certbot.sh  deploy.sh  docker-compose.yml  health-check.sh  nx.json  package-lock.json  package.json  renew-certs.sh  switch-to-ssl.sh
api/: .gitignore  pyproject.toml  requirements.txt
api/app/: main.py
api/app/core/: config.py
api/app/db/: BaseRepository.py
api/app/shared/users/: controller.py  model.py  repository.py
apps/java/: build.gradle.kts
apps/mobile/: index.html  metro.config.js  package.json
nginx/: .dockerignore  Dockerfile  nginx-http-only.conf  nginx-reverse-proxy.conf
service/: .dockerignore  Dockerfile  build.gradle.kts  settings.gradle.kts
service/buildSrc/: build.gradle.kts
service/src/main/resources/: application-production.properties  application.properties
web/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  main.tsx
web/src/components/: AddCategoryModal.tsx
web/src/components/dashboard/: AddCategoryModal.tsx  CategoryModal.tsx
web/src/components/transactions/: TransactionModal.tsx
web/src/pages/accounts/: AccountsPage.tsx
web/src/pages/categories/: CategoriesPage.tsx
web/src/pages/dashboard/: DashboardPage.tsx
web/src/pages/tags/: TagsPage.tsx
web/src/pages/transactions/: TransactionsPage.tsx
web/src/pages/vendors/: VendorsPage.tsx
web/src/shared/query/: api.ts  (+2 more)
web/src/types/: account.ts  budgetCategory.ts  category.ts  index.ts  transaction.ts  vendor.ts
(+83 files in other folders)
